<?xml version="1.0"?>
<package>
  <name>talos_gazebo</name>
  <version>1.0.0</version>
  <description>The talos_gazebo package</description>

  <maintainer email="noobaca2@gmail.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://openrobotics.ca</url>

  <author email="noobaca2@gmail.com">Devon Ash</author>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>talos_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>
