<?xml version="1.0"?>
<package>
  <name>talos_simulator</name>
  <version>1.0.0</version>
  <description>The talos_simulator package</description>

  <maintainer email="noobaca2@gmail.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://openrobotics.ca</url>
  <author email="noobaca2@gmail.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>talos_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
